# rustxt

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml  typos.local.toml  typos.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  fetcher.rs  main.rs  output.rs  summarizer.rs
src/parser/: index.rs  item.rs  markdown.rs  mod.rs
